fix(job-list): mobile layout issue resolved

--- a/assets/scss/components/_job-list.scss
+++ b/assets/scss/components/_job-list.scss
@@ -151,6 +151,7 @@ $job-list-detail-transition-3-delay: 1.8s;
     height: 100%;
     width: 100%;
     background-color: var(--job-list-detail-color);
+    z-index: -1;
 
     @include media-breakpoint-up(lg) {
       transition: width 0.6s $animation-transition;
@@ -200,6 +201,31 @@ $job-list-detail-transition-3-delay: 1.8s;
   @include font-style($style: 'font-size-2', $line: 'wide');
 
   margin-bottom: spacing(10);
+  margin-top: spacing(16);
+  padding-top: spacing(8);
+  position: relative;
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    height: calc(100% + #{spacing(10)});
+    width: 101vw;
+    background-color: var(--color-white);
+    z-index: -1;
+  }
+
+  @include media-breakpoint-up(lg) {
+    margin-top: 0;
+    padding-top: 0;
+
+    &::before {
+      display: none;
+    }
+  }
 }
 
 .job-list__detail-description {
